--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@anim/decelerate_low_factor_interpolator">
-
-    <translate
-        android:duration="300"
-        android:fromXDelta="0%p"
-        android:toXDelta="-100%p" />
-
-    <alpha
-        android:duration="300"
-        android:fromAlpha="1"
-        android:toAlpha="0.85" />
-
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate android:fromXDelta="0%" android:toXDelta="-100%"
+        android:fromYDelta="0%" android:toYDelta="0%"
+        android:duration="@integer/slide"/>
 </set>
