--- a/app/src/main/res/anim/default_pop_enter.xml
+++ b/app/src/main/res/anim/default_pop_enter.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@anim/decelerate_factor_interpolator">
+
+    <translate
+        android:duration="@integer/default_duration"
+        android:fromXDelta="-40%p"
+        android:toXDelta="0%p" />
+
     <alpha
         android:duration="@integer/default_duration"
-        android:fromAlpha="0"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        android:toAlpha="1.0"  />
+        android:fromAlpha="0.85"
+        android:toAlpha="1" />
+
 </set>
