--- a/app/src/main/res/anim/default_pop_exit.xml
+++ b/app/src/main/res/anim/default_pop_exit.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@anim/decelerate_factor_interpolator">
+
+    <translate
         android:duration="@integer/default_duration"
-        android:fromAlpha="1.0"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        android:toAlpha="0.0" />
+        android:fromXDelta="0%p"
+        android:toXDelta="100%p"/>
+
 </set>
